2008-02-23  Andras Varga

	Summary of changes for omnetpp-4.0 (2006..2008):

	* inifile syntax change: [Tkenv] config entries became tkenv-...;
	however, see below:

	* inifile entries for options that also appear in the Simulation
	Options dialog have been REMOVED: tkenv-slowexec-delay=,
	tkenv-update-freq-fast=, tkenv-animation-enabled=, etc., because
	they took no effect anyway (when a .tkenvrc file was present,
	settings were taken from that instead of omnetpp.ini).

	* default configuration and default run number (they cause the
	network to be set up automatically when Tkenv starts up)
	can be specified with -c and -r command-line options or the
	tkenv-default-config= and tkenv-default-run= ini file options.

	* OMNETPP_BITMAP_PATH environment variable is now called
	OMNETPP_IMAGE_PATH

	* likewise, the [Tkenv]/bitmap-path= inifile option is now
	called tkenv-image-path=.

	* implemented zooming

	* implemented "hide module names" feature

	* display string improvements:
	 - multiple "r" and "t" tags supported per submodule (as "r1", "r2" etc);
	 - added "bgt" tag: bgt=<x>,<y>,<text>,<color>; multiple tags supported ("bgt1","bgt2",etc)
	 - added support for new display string tags: bgi, bgg, bgs, bgg,... ; made consistent with NED editor

	* NOTE: icon names (png/gif file names) MUST BE lowercase

	* added support for reading PNG images as icons, using TkPNG 0.7
	(https://sourceforge.net/projects/tkpng/). Checking in a copy of
	the TkPNG sources was felt more practical than adding TkPNG as an
	external dependency.

	* from now on, you need to specify "-u _tkenv_lib" (gcc) or
	"/include:_tkenv_lib" (vc++) in addition to -ltkenv (or tkenv.lib)
	on the linker command line. But: now you can have a program with both
	Cmdenv and Tkenv in it.

	* out-of-directory build, and other Makefile changes

	* SEE CHANGES FOR ENVIR TOO. (Envir is the common part of Cmdenv and
	Tkenv).

2006-11-19  ------ omnetpp-3.4b2 released ------

2006-11-14  Andras Varga
