@@ -58,6 +58,7 @@
 
 proc create_graphicalgatewindow {name geom} {
     global icons help_tips
+    global B2 B3
 
     set w $name
     create_inspector_toplevel $w $geom
@@ -94,11 +95,11 @@ proc create_graphicalgatewindow {name geom} {
     $c bind msg <Double-1> "graphgatewin_dblclick $c"
     $c bind msgname <Double-1> "graphgatewin_dblclick $c"
 
-    $c bind mod <3> "graphgatewin_rightclick $c %X %Y"
-    $c bind gate <3> "graphgatewin_rightclick $c %X %Y"
-    $c bind conn <3> "graphgatewin_rightclick $c %X %Y"
-    $c bind msg <3> "graphgatewin_rightclick $c %X %Y"
-    $c bind msgname <3> "graphgatewin_rightclick $c %X %Y"
+    $c bind mod <$B3> "graphgatewin_rightclick $c %X %Y"
+    $c bind gate <$B3> "graphgatewin_rightclick $c %X %Y"
+    $c bind conn <$B3> "graphgatewin_rightclick $c %X %Y"
+    $c bind msg <$B3> "graphgatewin_rightclick $c %X %Y"
+    $c bind msgname <$B3> "graphgatewin_rightclick $c %X %Y"
 
     opp_inspectorcommand $w redraw
 }
